@@ -2409,7 +2409,16 @@ void process_signals()
 		pwrstat = c;
 		close(fd);
 		unlink(PWRSTAT);
-	}
+	} else if ((fd = open(PWRSTAT_OLD, O_RDONLY)) >= 0) {
+		/* Path changed 2010-03-20.  Look for the old path for a while. */
+		initlog(L_VB, "warning: found obsolete path %s, use %s instead",
+			PWRSTAT_OLD, PWRSTAT);
+		c = 0;
+		read(fd, &c, 1);
+		pwrstat = c;
+		close(fd);
+		unlink(PWRSTAT_OLD);
+        }
 	do_power_fail(pwrstat);
 	DELSET(got_signals, SIGPWR);
   }
